platform/governance/kyverno/policies/disallow-root.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root
  annotations:
    policies.kyverno.io/title: Disallow Root and Privileged
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Containers must run as non-root, and cannot be privileged or allow privilege escalation.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "Containers cannot be privileged."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): false
    - name: check-allow-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "Allowing privilege escalation is not allowed."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(allowPrivilegeEscalation): false
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
      validate:
        message: "Containers must run as non-root."
        pattern:
          spec:
            =(securityContext):
              runAsNonRoot: true
